# eurovision-vote-forecast

./: .gitignore  README.md  jury_votes_scraper_2016_2025.py  pyproject.toml
data/: jury_votes_2016.csv  jury_votes_2017.csv  jury_votes_2018.csv  jury_votes_2019.csv  jury_votes_2021.csv  jury_votes_2022.csv  jury_votes_2023.csv  jury_votes_2024.csv  jury_votes_2025.csv
notebooks/: baseline_backtest.ipynb  eda_before_modelling.ipynb
src/: add_iso_codes_to_long_datasets.py  eurovision_country_mapping.py  fetch_iso_country_codes.py  jury_votes_scraper_2016_2025.py  prepare_jury_votes_long.py
src/data_processing/: eurovision_country_mapping.py
src/eurojury/: __init__.py  aggregate.py  io.py  validate.py
src/models/: __init__.py  baseline.py  metrics.py
